Change Log
==========


2019-09-22 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* added "label" field to api.share_*() methods (#417)



2019-09-20 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bug fix in proxy_router() machine
* bug fix in supplier_finder() machine
* added "services/employer/candidates" option
* added "keep_alive" parameter to online_status() automat
* increased ping timeouts and response time in few places
* bug fix in online_status() machine
* built new handshaker() automat
* improvements in supplier_connector()
* replaced propagate.PingContact() with online_status ping()/hanshake() methods
* bug fix in tcp transport
* solving issues with messaging
* make possible to set "label" for a key



2019-09-13 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* minor changes in api interface
* small fix in messaging
* fix in id_url when my identity not exists yet
* make possible to set "label" for shares
* added "label" meta field to all my keys
* added new api.key_label() method to modify key labels
* minor py3 fixex



2019-09-11 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* share pub key from customer to supplier if key is missing for shared access
* also make sure local backup files are removed after upload/download finished (#415)



2019-09-09 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* few more fixes for file uploading / downloading (#413)



2019-09-08 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* bug fix in keys_synchronizer()



2019-09-08 Veselin Penev [penev.veselin@gmail.com](mailto:penev.veselin@gmail.com)

* raising "my-keys-synchronize-failed" event from keys_synchronizer() (#411)
* prevent backup_rebuilder() and restore_worker() automats to work on same file at once
* added slashes to folder paths in settings
* solving issues with keys_synchronizer() automat (#64)


